--- a/app/src/main/res/drawable/ic_cursor.xml
+++ b/app/src/main/res/drawable/ic_cursor.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24">
+        android:width="1dp"
+        android:height="18dp"
+        android:viewportWidth="1"
+        android:viewportHeight="18">
 
     <path android:name="myshape"
           android:fillColor="@color/colorPrimary"
-          android:pathData="@string/path_square"/>
+          android:pathData="M0,0v18h1v-18Z"/>
 </vector>
