--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,26 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <android.support.constraint.motion.MotionLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/red_letters_container">
+            android:id="@+id/red_letters_container"
+            app:layoutDescription="@xml/motionscene_test"
+            tools:showPaths="true">
 
         <ImageView
                 android:id="@+id/image"
                 android:layout_width="128dp"
                 android:layout_height="128dp"
-                android:src="@drawable/anim_morph"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                android:src="@drawable/anim_morph"/>
 
         <ImageView
                 android:id="@+id/letter_s"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:src="@drawable/anim_s_circle"
-                android:layout_margin="@dimen/logo_letter_margin"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/letter_t"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:padding="@dimen/logo_letter_margin"
                 app:layout_constraintHorizontal_chainStyle="packed"/>
 
         <ImageView
@@ -40,34 +34,22 @@
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:src="@drawable/anim_t_circle"
-                android:layout_margin="@dimen/logo_letter_margin"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_s"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/letter_r"/>
+                android:padding="@dimen/logo_letter_margin"/>
 
         <ImageView
                 android:id="@+id/letter_r"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:layout_margin="@dimen/logo_letter_margin"
-                android:src="@drawable/anim_r_circle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_t"
-                app:layout_constraintEnd_toStartOf="@id/letter_v"/>
+                android:padding="@dimen/logo_letter_margin"
+                android:src="@drawable/anim_r_circle"/>
 
         <ImageView
                 android:id="@+id/letter_v"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:layout_margin="@dimen/logo_letter_margin"
-                android:src="@drawable/anim_v_circle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_r"
-                app:layout_constraintEnd_toEndOf="parent"/>
-    </android.support.constraint.ConstraintLayout>
+                android:padding="@dimen/logo_letter_margin"
+                android:src="@drawable/anim_v_circle"/>
+    </android.support.constraint.motion.MotionLayout>
 
     <android.support.constraint.ConstraintLayout
             android:id="@+id/black_letters_container"
@@ -81,7 +63,7 @@
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:src="@drawable/ic_strv_s"
-                android:layout_margin="@dimen/logo_letter_margin"
+                android:padding="@dimen/logo_letter_margin"
                 android:tint="@android:color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +76,7 @@
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:src="@drawable/ic_strv_t"
-                android:layout_margin="@dimen/logo_letter_margin"
+                android:padding="@dimen/logo_letter_margin"
                 android:tint="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -105,7 +87,7 @@
                 android:id="@+id/letter_r1"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:layout_margin="@dimen/logo_letter_margin"
+                android:padding="@dimen/logo_letter_margin"
                 android:src="@drawable/ic_strv_r"
                 android:tint="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -117,13 +99,29 @@
                 android:id="@+id/letter_v1"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:layout_margin="@dimen/logo_letter_margin"
+                android:padding="@dimen/logo_letter_margin"
                 android:src="@drawable/ic_strv_v"
                 android:tint="@android:color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/letter_r1"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Space
+                android:layout_width="@dimen/logo_letter_margin"
+                android:layout_height="0dp"
+                android:id="@+id/cursor_anchor"
+                app:layout_constraintEnd_toEndOf="@id/letter_v1"
+                app:layout_constraintTop_toTopOf="@id/letter_v1"
+                app:layout_constraintBottom_toBottomOf="@id/letter_v1"/>
+
+        <ImageView
+                android:layout_width="@dimen/logo_cursor_width"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@id/cursor_anchor"
+                app:layout_constraintBottom_toBottomOf="@id/cursor_anchor"
+                app:layout_constraintStart_toStartOf="@id/cursor_anchor"
+                android:src="@drawable/ic_cursor"/>
 
     </android.support.constraint.ConstraintLayout>
 
