--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/red_letters_container"
-            app:layoutDescription="@xml/motionscene_test"
+            app:layoutDescription="@xml/motionscene_letters_fly_in"
             tools:showPaths="true">
 
         <ImageView
@@ -62,7 +62,7 @@
                 android:id="@+id/letter_s1"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/ic_strv_s"
+                android:src="@drawable/anim_s_rect"
                 android:padding="@dimen/logo_letter_margin"
                 android:tint="@android:color/white"
                 app:layout_constraintTop_toTopOf="parent"
@@ -75,7 +75,7 @@
                 android:id="@+id/letter_t1"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/ic_strv_t"
+                android:src="@drawable/anim_t_rect"
                 android:padding="@dimen/logo_letter_margin"
                 android:tint="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -88,7 +88,7 @@
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:padding="@dimen/logo_letter_margin"
-                android:src="@drawable/ic_strv_r"
+                android:src="@drawable/anim_r_rect"
                 android:tint="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -100,7 +100,7 @@
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
                 android:padding="@dimen/logo_letter_margin"
-                android:src="@drawable/ic_strv_v"
+                android:src="@drawable/anim_v_rect"
                 android:tint="@android:color/white"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
