--- a/app/src/main/res/animator/animator_r_rect.xml
+++ b/app/src/main/res/animator/animator_r_rect.xml
@@ -2,11 +2,11 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@integer/anim_duration"
+            android:duration="@integer/anim_letter_duration"
             android:propertyName="pathData"
-            android:valueFrom="@string/path_r_rect"
-            android:valueTo="@string/path_r"
+            android:valueTo="@string/path_r_rect"
+            android:valueFrom="@string/path_r"
             android:valueType="pathType"
-            android:interpolator="@android:interpolator/bounce"/>
+            android:interpolator="@android:interpolator/accelerate_cubic"/>
 
 </set>
