--- a/app/src/main/res/animator/animator_s_circle.xml
+++ b/app/src/main/res/animator/animator_s_circle.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@integer/anim_duration"
+            android:duration="@integer/anim_letter_duration"
             android:propertyName="pathData"
             android:valueFrom="@string/path_s_circle"
             android:valueTo="@string/path_s"
