--- a/app/src/main/res/animator/animator_t_rect.xml
+++ b/app/src/main/res/animator/animator_t_rect.xml
@@ -2,10 +2,11 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <objectAnimator
-            android:duration="@integer/anim_duration"
+            android:duration="@integer/anim_letter_duration"
             android:propertyName="pathData"
-            android:valueFrom="@string/path_t_rect"
-            android:valueTo="@string/path_t"
-            android:valueType="pathType"/>
+            android:valueTo="@string/path_t_rect"
+            android:valueFrom="@string/path_t"
+            android:valueType="pathType"
+            android:interpolator="@android:interpolator/accelerate_cubic"/>
 
 </set>
