--- a/app/src/main/res/drawable/anim_r_rect.xml
+++ b/app/src/main/res/drawable/anim_r_rect.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:drawable="@drawable/ic_strv_r_rect">
+        android:drawable="@drawable/ic_strv_r">
 
     <target android:animation="@animator/animator_r_rect"
             android:name="letter_r"/>
