--- a/app/src/main/res/values/ints.xml
+++ b/app/src/main/res/values/ints.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="anim_duration">350</integer>
+    <integer name="anim_letter_duration">350</integer>
 </resources>
