--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="logo_letter_height">192dp</dimen>
-    <dimen name="logo_letter_width">64dp</dimen>
+    <dimen name="logo_letter_height">168dp</dimen>
+    <dimen name="logo_letter_width">72dp</dimen>
     <dimen name="logo_cursor_width">10dp</dimen>
+    <dimen name="logo_cursor_height">192dp</dimen>
     <dimen name="logo_letter_height_small">72dp</dimen>
     <dimen name="logo_letter_width_small">24dp</dimen>
-    <dimen name="logo_letter_margin">7dp</dimen>
+    <dimen name="logo_letter_height_large">384dp</dimen>
+    <dimen name="logo_letter_padding_horizontal">7dp</dimen>
+    <dimen name="logo_letter_padding_vertical">16dp</dimen>
 </resources>
