--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,6 +123,7 @@
                 android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:scaleType="fitXY"
                 app:layout_constraintStart_toStartOf="@id/letters_anchor"
                 android:src="@drawable/ic_cursor"/>
 
