--- a/app/src/main/res/xml/motionscene_rect_expand.xml
+++ b/app/src/main/res/xml/motionscene_rect_expand.xml
@@ -5,16 +5,128 @@
     <Transition
             app:constraintSetStart="@id/start"
             app:constraintSetEnd="@id/end"
-            app:interpolator="easeOut"
-            app:duration="2000"
-            app:staggered="0.7">
+            app:duration="3000">
 
         <KeyFrameSet>
+
             <KeyPosition
                     app:target="@id/letter_s1"
+                    app:framePosition="20"
+                    app:percentY="-0.5"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_s1"
+                    app:framePosition="40"
+                    app:percentY="0"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_s1"
+                    app:framePosition="60"
+                    app:percentY="1"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_t1"
+                    app:framePosition="30"
+                    app:percentY="-0.5"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_t1"
+                    app:framePosition="60"
+                    app:percentY="0"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_t1"
+                    app:framePosition="80"
+                    app:percentY="1"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_r1"
+                    app:framePosition="15"
+                    app:percentY="-0.5"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_r1"
+                    app:framePosition="45"
+                    app:percentY="0"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_r1"
+                    app:framePosition="65"
+                    app:percentY="1"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_v1"
+                    app:framePosition="25"
+                    app:percentY="-0.5"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_v1"
+                    app:framePosition="70"
+                    app:percentY="1"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_v1"
                     app:framePosition="50"
                     app:percentY="0"
                     app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_cursor"
+                    app:framePosition="60"
+                    app:percentY="0"
+                    app:percentX="0"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyPosition
+                    app:target="@id/letter_cursor"
+                    app:framePosition="80"
+                    app:percentY="1"
+                    app:percentX="1"
+                    app:keyPositionType="deltaRelative"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:rotation="0"
+                    app:framePosition="60"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:rotation="90"
+                    app:framePosition="80"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:scaleX="1"
+                    app:framePosition="90"
+                    app:transitionEasing="standard"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:scaleX="4"
+                    app:framePosition="97"
+                    app:transitionEasing="accelerate"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:scaleX="4"
+                    app:framePosition="99"
+                    app:transitionEasing="accelerate"/>
+
+            <KeyAttribute
+                    app:target="@id/letter_cursor"
+                    android:scaleX="0"
+                    app:framePosition="100"/>
 
         </KeyFrameSet>
 
@@ -33,32 +145,42 @@
                 app:layout_constraintEnd_toStartOf="@id/letter_t1"
                 app:layout_constraintHorizontal_chainStyle="packed"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="@dimen/logo_letter_height"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_s1"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/letter_r1"/>-->
+        <Constraint
+                android:id="@id/letter_t1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_s1"
+                app:layout_constraintEnd_toStartOf="@id/letter_r1"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="@dimen/logo_letter_height"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_t1"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/letter_v1"/>-->
+        <Constraint
+                android:id="@id/letter_r1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_t1"
+                app:layout_constraintEnd_toStartOf="@id/letter_v1"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="@dimen/logo_letter_height"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_r1"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"/>-->
+        <Constraint
+                android:id="@id/letter_v1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_r1"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Constraint
+                android:id="@id/letter_cursor"
+                android:layout_width="@dimen/logo_cursor_width"
+                android:layout_height="@dimen/logo_letter_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="@id/letters_anchor">
+
+        </Constraint>
 
     </ConstraintSet>
 
@@ -74,32 +196,42 @@
                 app:layout_constraintEnd_toStartOf="@id/letter_t1"
                 app:layout_constraintHorizontal_chainStyle="packed"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="@id/letters_anchor"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_s1"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/letter_r1"/>-->
+        <Constraint
+                android:id="@id/letter_t1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height_large"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_s1"
+                app:layout_constraintEnd_toStartOf="@id/letter_r1"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="@id/letters_anchor"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_t1"-->
-        <!--app:layout_constraintEnd_toStartOf="@id/letter_v1"/>-->
+        <Constraint
+                android:id="@id/letter_r1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height_large"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_t1"
+                app:layout_constraintEnd_toStartOf="@id/letter_v1"/>
 
-        <!--<Constraint-->
-        <!--android:id="@id/letter_s1"-->
-        <!--android:layout_width="@dimen/logo_letter_width"-->
-        <!--android:layout_height="0dp"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintBottom_toBottomOf="@id/letters_anchor"-->
-        <!--app:layout_constraintStart_toEndOf="@id/letter_r1"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"/>-->
+        <Constraint
+                android:id="@id/letter_v1"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height_large"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/letter_r1"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Constraint
+                android:id="@id/letter_cursor"
+                android:layout_width="@dimen/logo_cursor_width"
+                android:layout_height="@dimen/logo_letter_height"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:rotation="90"
+                android:scaleX="0">
+
+        </Constraint>
 
     </ConstraintSet>
 
