Support animation restart and cleanup project

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,6 @@
             tools:showPaths="true">
 
         <ImageView
-                android:id="@+id/image"
-                android:layout_width="128dp"
-                android:layout_height="128dp"
-                android:visibility="gone"
-                android:src="@drawable/anim_morph"/>
-
-        <ImageView
                 android:id="@+id/letter_s"
                 android:layout_width="@dimen/logo_letter_width"
                 android:layout_height="@dimen/logo_letter_height"
@@ -57,8 +50,7 @@
             android:background="@android:color/black"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutDescription="@xml/motionscene_rect_expand"
-    >
+            app:layoutDescription="@xml/motionscene_rect_expand">
 
         <Space
                 android:layout_width="@dimen/logo_letter_padding_horizontal"
@@ -128,5 +120,12 @@
                 android:src="@drawable/ic_cursor"/>
 
     </android.support.constraint.motion.MotionLayout>
+
+    <FrameLayout
+            android:id="@+id/loading_overlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="@android:color/white"/>
 
 </FrameLayout>
