--- a/app/src/main/res/xml/motionscene_rect_expand.xml
+++ b/app/src/main/res/xml/motionscene_rect_expand.xml
@@ -5,7 +5,7 @@
     <Transition
             app:constraintSetStart="@id/start"
             app:constraintSetEnd="@id/end"
-            app:duration="3000">
+            app:duration="@integer/anim_rect_expand_duration">
 
         <KeyFrameSet>
 
