--- a/app/src/main/res/xml/motionscene_letters_fly_in.xml
+++ b/app/src/main/res/xml/motionscene_letters_fly_in.xml
@@ -21,7 +21,6 @@
                 android:layout_height="@dimen/logo_letter_height_small"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="parent"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"
                 app:pathMotionArc="startHorizontal"/>
 
         <Constraint
@@ -30,7 +29,6 @@
                 android:layout_width="@dimen/logo_letter_width_small"
                 android:layout_height="@dimen/logo_letter_height_small"
                 app:layout_constraintEnd_toStartOf="parent"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"
                 app:pathMotionArc="startHorizontal"/>
 
         <Constraint
@@ -39,7 +37,6 @@
                 android:layout_width="@dimen/logo_letter_width_small"
                 android:layout_height="@dimen/logo_letter_height_small"
                 app:layout_constraintStart_toEndOf="parent"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"
                 app:pathMotionArc="startHorizontal"/>
 
         <Constraint
@@ -48,7 +45,6 @@
                 android:layout_width="@dimen/logo_letter_width_small"
                 android:layout_height="@dimen/logo_letter_height_small"
                 app:layout_constraintStart_toEndOf="parent"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"
                 app:pathMotionArc="startHorizontal"/>
 
     </ConstraintSet>
@@ -58,44 +54,40 @@
 
         <Constraint
                 android:id="@id/letter_s"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintEnd_toStartOf="@id/letter_t"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"/>
+                app:layout_constraintHorizontal_chainStyle="packed"/>
 
         <Constraint
                 android:id="@id/letter_t"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/letter_s"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                app:layout_constraintEnd_toStartOf="@id/letter_r"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"/>
+                app:layout_constraintEnd_toStartOf="@id/letter_r"/>
 
         <Constraint
                 android:id="@id/letter_r"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/letter_t"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                app:layout_constraintEnd_toStartOf="@id/letter_v"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"/>
+                app:layout_constraintEnd_toStartOf="@id/letter_v"/>
 
         <Constraint
                 android:id="@id/letter_v"
+                android:layout_width="@dimen/logo_letter_width"
+                android:layout_height="@dimen/logo_letter_height"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/letter_r"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_margin="@dimen/logo_letter_padding_horizontal"/>
+                app:layout_constraintEnd_toEndOf="parent"/>
 
     </ConstraintSet>
 
