--- a/app/src/main/res/xml/motionscene_letters_fly_in.xml
+++ b/app/src/main/res/xml/motionscene_letters_fly_in.xml
@@ -6,9 +6,9 @@
     <Transition
             app:constraintSetStart="@id/start"
             app:constraintSetEnd="@id/end"
-            app:interpolator="easeOut"
+            app:interpolator="easeInOut"
             app:duration="@integer/anim_letters_fly_in_duration"
-            app:staggered="0.7">
+            app:staggered="0.4">
 
     </Transition>
 
