Shorten the vector drawable paths by omitting the spaces to make them more optimized

--- a/app/src/main/res/values/paths.xml
+++ b/app/src/main/res/values/paths.xml
@@ -1,203 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="path_square">M4,20C4,20, 20,20 20,20C20,20 20,4 20,4C20,4 4,4 4,4C4,4 4,20 4,20</string>
-
-    <string name="path_v">
-        M4,0
-        C6,0 4.1,0 4.1,0
-        C4.1,0 3,11 3,11
-        C3,11 1.9,0 1.9,0
-        C1.9,0 0,0 0,0
-        C0,0 1.7,14 1.7,14
-        C1.7,14 3,14 3,14
-        C3,14 4.3,14 4.3,14
-        C4.3,14 6,0 6,0
+    <string name="path_v">M4,0 C6,0 4.1,0 4.1,0 C4.1,0 3,11 3,11 C3,11 1.9,0 1.9,0 C1.9,0 0,0 0,0 C0,0 1.7,14 1.7,14
+        C1.7,14 3,14 3,14 C3,14 4.3,14 4.3,14 C4.3,14 6,0 6,0
+    </string>
+    <string name="path_v_rect">M6,0 C6,0 4.2,0 4.2,0 C4.2,0 3,0 3,0 C3,0 1.8,0 1.8,0 C1.8,0 0,0 0,0 C0,0 0,14 0,14 C0,14
+        3,14 3,14 C3,14 6,14 6,14 C6,14 6,0 6,0
+    </string>
+    <string name="path_v_circle">M6,7 C6,6.1 5.52,5.28 5.12,4.88 C4.82,4.48 3.9,4 3,4 C2.1,4 1.28,4.48 0.88,4.88
+        C0.48,5.28 0,6.1 0,7 C0,7.9 0.48,8.72 0.88,9.12 C1.28,9.52 2.1,10 3,10 C3.9,10 4.72,9.52 5.12,9.12 C5.52,8.72
+        6,7.9 6,7
+    </string>
+    <string name="path_v_circle_simple">M6,9 C6,8.1 5.52,7.28 5.12,6.88 S3.9,6 3,6 S1.28,6.48 0.88,6.88 S0,8.1 0,9
+        S0.48,10.72 0.88,11.12 S2.1,12 3,12 S4.72,11.52 5.12,11.12 S6,9.9 6,9Z
     </string>
 
-    <string name="path_v_rect">
-        M6,0
-        C6,0 4.2,0 4.2,0
-        C4.2,0 3,0 3,0
-        C3,0 1.8,0 1.8,0
-        C1.8,0 0,0 0,0
-        C0,0 0,14 0,14
-        C0,14 3,14 3,14
-        C3,14 6,14 6,14
-        C6,14 6,0 6,0
+    <string name="path_t">M4,2 C4,2 6,2 6,2 C6,2 6,0 6,0 C6,0 0,0 0,0 C0,0 0,2 0,2 C0,2 2,2 2,2 C2,2 2,14 2,14 C2,14
+        4,14 4,14 C4,14 4,2 4,2
+    </string>
+    <string name="path_t_rect">M6,14 C6,14 6,7 6,7 C6,7 6,0 6,0 C6,0 0,0 0,0 C0,0 0,7 0,7 C0,9 0,14 0,14 C0,14 2,14 2,14
+        C2,14 4,14 4,14 C4,14 6,14 6,14
+    </string>
+    <string name="path_t_circle">M5.77,8.15 C6.11,7.32 5.99,6.37 5.77,5.85 C5.55,5.33 4.98,4.57 4.15,4.23 C3.32,3.89
+        2.37,4.01 1.85,4.23 C1.33,4.45 0.57,5.02 0.23,5.85 C-0.11,6.68 0.01,7.63 0.23,8.15 C0.45,8.67 1.02,9.43
+        1.85,9.77 C2.68,10.11 3.63,9.99 4.15,9.77 C4.67,9.55 5.43,8.98 5.77,8.15
     </string>
 
-    <string name="path_v_circle">
-        M6,7
-        C6,6.1 5.52,5.28 5.12,4.88
-        C4.82,4.48 3.9,4 3,4
-        C2.1,4 1.28,4.48 0.88,4.88
-        C0.48,5.28 0,6.1 0,7
-        C0,7.9 0.48,8.72 0.88,9.12
-        C1.28,9.52 2.1,10 3,10
-        C3.9,10 4.72,9.52 5.12,9.12
-        C5.52,8.72 6,7.9 6,7
+    <string name="path_s">M4,5 C4,5 5,5 5,5 C5,5 6,5 6,5 C6,5 6,3 6,3 C6,1.34 4.66,0 3,0 C1.34,0 0,1.34 0,3 C0,3 0,4 0,4
+        C0,6.5 2.1,7.5 2.1,7.5 C2.1,7.5 4,8.5 4,10 C4,9 4,11 4,11 C4,11.55 3.55,12 3,12 C2.45,12 2,11.55 2,11 C2,11 2,9
+        2,9 C2,9 1,9 1,9 C1,9 0,9 0,9 C0,9 0,11 0,11 C0,12.66 1.34,14 3,14 C4.66,14 6,12.66 6,11 C6,11 6,10 6,10 C6,7.5
+        3.9,6.5 3.9,6.5 C3.9,6.5 2,5.5 2,4 C2,5 2,3 2,3 C2,2.45 2.45,2 3,2 C3.55,2 4,2.45 4,3 C4,3 4,5 4,5
+    </string>
+    <string name="path_s_rect">M6,4 C6,4 6,2 6,2 C6,2 6,0 6,0 C6,0 4.5,0 4.5,0 C4.5,0 3,0 3,0 C3,0 1.5,0 1.5,0 C1.5,0
+        0,0 0,0 C0,0 0,2 0,2 C0,2 0,4 0,4 C0,4 0,6 0,6 C0,6 0,8 0,8 C0,8 0,9 0,9 C0,9 0,10 0,10 C0,10 0,12 0,12 C0,12
+        0,14 0,14 C0,14 1.5,14 1.5,14 C1.5,14 3,14 3,14 C3,14 4.5,14 4.5,14 C4.5,14 6,14 6,14 C6,14 6,12 6,12 C6,12 6,10
+        6,10 C6,10 6,8 6,8 C6,8 6,6 6,6 C6,6 6,5 6,5 C6,5 6,4 6,4
+    </string>
+    <string name="path_s_circle">M5.6,5.5 C5.47,5.275 5.3,5.06 5.12,4.88 C4.94,4.7 4.725,4.53 4.5,4.4 C4.275,4.27
+        4.03,4.167 3.78,4.1 C3.53,4.033 3.26,4 3,4 C2.74,4 2.47,4.033 2.22,4.1 C1.97,4.167 1.725,4.27 1.5,4.4
+        C1.275,4.53 1.06,4.7 0.88,4.88 C0.7,5.06 0.53,5.275 0.4,5.5 C0.27,5.725 0.167,5.97 0.1,6.22 C0.033,6.47 0,6.74
+        0,7 C0,7.24 0.033,7.53, 0.1,7.78 C0.167,8.03 0.27,8.275 0.4,8.5 C0.53,8.735 0.7,8.94 0.88,9.12 C1.06,9.3
+        1.275,9.47 1.5,9.6 C1.725,9.73 1.97,9.833 2.22,9.9 C2.47,9.967 2.74,10 3,10 C3.26,10 3.53,9.967 3.78,9.9
+        C4.03,9.833 4.275,9.73 4.5,9.6 C4.725,9.47 4.94,9.3 5.12,9.12 C5.3,8.94 5.47,8.725 5.6,8.5 C5.73,8.275
+        5.833,8.03 5.9,7.78 C5.967,7.53 6,7.26 6,7 C6,6.74 5.967,6.47 5.9,6.22 C5.833,5.97 5.73,5.725 5.6,5.5
     </string>
 
-    <string name="path_v_circle_simple">
-        M6,9
-        C6,8.1 5.52,7.28 5.12,6.88
-        S3.9,6 3,6
-        S1.28,6.48 0.88,6.88
-        S0,8.1 0,9
-        S0.48,10.72 0.88,11.12
-        S2.1,12 3,12
-        S4.72,11.52 5.12,11.12
-        S6,9.9 6,9Z
+    <string name="path_r">M4.5,7.75 C4.5,7.75 6,7.1 6,5 C6,8 6,0 6,2.5 C6,1.2 4.8,0 3.5,0 C4,0 0,0 0,0 C0,0 0,4 0,4 C0,4
+        0,7 0,7 C0,7 0,10 0,10 C0,10 0,14 0,14 C0,14 2,14 2,14 C2,14 2,10 2,10 C2,10 2,6 2,6 C2,6 2,2 2,2 C2,2 3,2 3,2
+        C3.55,2 4,2.55 4,3 C4,3 4,5 4,5 C4,5.55 3.55,6 3,6 C3,6 2,6 2,6 C2,6 2,8 2,8 C2,8 2.7,8 2.7,8 C2.7,8 3.4,11
+        3.4,11 C3.4,11 4.1,14 4.1,14 C4.1,14 6,14 6,14 C6,14 5.25,10.88 5.25,10.88 C5.25,10.88 4.5,7.75 4.5,7.75
     </string>
-
-    <string name="path_t">
-        M4,2
-        C4,2 6,2 6,2
-        C6,2 6,0 6,0
-        C6,0 0,0 0,0
-        C0,0 0,2 0,2
-        C0,2 2,2 2,2
-        C2,2 2,14 2,14
-        C2,14 4,14 4,14
-        C4,14 4,2 4,2
-    </string>
-
-    <string name="path_t_rect">
-        M6,14
-        C6,14 6,7 6,7
-        C6,7 6,0 6,0
-        C6,0 0,0 0,0
-        C0,0 0,7 0,7
-        C0,9 0,14 0,14
-        C0,14 2,14 2,14
-        C2,14 4,14 4,14
-        C4,14 6,14 6,14
-    </string>
-
-    <string name="path_t_circle">
-        M5.77,8.15
-        C6.11,7.32 5.99,6.37 5.77,5.85
-        C5.55,5.33 4.98,4.57 4.15,4.23
-        C3.32,3.89 2.37,4.01 1.85,4.23
-        C1.33,4.45 0.57,5.02 0.23,5.85
-        C-0.11,6.68 0.01,7.63 0.23,8.15
-        C0.45,8.67 1.02,9.43 1.85,9.77
-        C2.68,10.11 3.63,9.99 4.15,9.77
-        C4.67,9.55 5.43,8.98 5.77,8.15
-    </string>
-
-    <string name="path_s">
-        M4,5
-        C4,5 5,5 5,5
-        C5,5 6,5 6,5
-        C6,5 6,3 6,3
-        C6,1.34 4.66,0 3,0
-        C1.34,0 0,1.34 0,3
-        C0,3 0,4 0,4
-        C0,6.5 2.1,7.5 2.1,7.5
-        C2.1,7.5 4,8.5 4,10
-        C4,9 4,11 4,11
-        C4,11.55 3.55,12 3,12
-        C2.45,12 2,11.55 2,11
-        C2,11 2,9 2,9
-        C2,9 1,9 1,9
-        C1,9 0,9 0,9
-        C0,9 0,11 0,11
-        C0,12.66 1.34,14 3,14
-        C4.66,14 6,12.66 6,11
-        C6,11 6,10 6,10
-        C6,7.5 3.9,6.5 3.9,6.5
-        C3.9,6.5 2,5.5 2,4
-        C2,5 2,3 2,3
-        C2,2.45 2.45,2 3,2
-        C3.55,2 4,2.45 4,3
-        C4,3 4,5 4,5
-    </string>
-
-    <string name="path_s_rect">
-        M6,4
-        C6,4 6,2 6,2
-        C6,2 6,0 6,0
-        C6,0 4.5,0 4.5,0
-        C4.5,0 3,0 3,0
-        C3,0 1.5,0 1.5,0
-        C1.5,0 0,0 0,0
-        C0,0 0,2 0,2
-        C0,2 0,4 0,4
-        C0,4 0,6 0,6
-        C0,6 0,8 0,8
-        C0,8 0,9 0,9
-        C0,9 0,10 0,10
-        C0,10 0,12 0,12
-        C0,12 0,14 0,14
-        C0,14 1.5,14 1.5,14
-        C1.5,14 3,14 3,14
-        C3,14 4.5,14 4.5,14
-        C4.5,14 6,14 6,14
-        C6,14 6,12 6,12
-        C6,12 6,10 6,10
-        C6,10 6,8 6,8
-        C6,8 6,6 6,6
-        C6,6 6,5 6,5
-        C6,5 6,4 6,4
-    </string>
-
-    <string name="path_s_circle">
-        M5.6,5.5
-        C5.47,5.275 5.3,5.06 5.12,4.88
-        C4.94,4.7 4.725,4.53 4.5,4.4
-        C4.275,4.27 4.03,4.167 3.78,4.1
-        C3.53,4.033 3.26,4 3,4
-        C2.74,4 2.47,4.033 2.22,4.1
-        C1.97,4.167 1.725,4.27 1.5,4.4
-        C1.275,4.53 1.06,4.7 0.88,4.88
-        C0.7,5.06 0.53,5.275 0.4,5.5
-        C0.27,5.725 0.167,5.97 0.1,6.22
-        C0.033,6.47 0,6.74 0,7
-        C0,7.24 0.033,7.53, 0.1,7.78
-        C0.167,8.03 0.27,8.275 0.4,8.5
-        C0.53,8.735 0.7,8.94 0.88,9.12
-        C1.06,9.3 1.275,9.47 1.5,9.6
-        C1.725,9.73 1.97,9.833 2.22,9.9
-        C2.47,9.967 2.74,10 3,10
-        C3.26,10 3.53,9.967 3.78,9.9
-        C4.03,9.833 4.275,9.73 4.5,9.6
-        C4.725,9.47 4.94,9.3 5.12,9.12
-        C5.3,8.94 5.47,8.725 5.6,8.5
-        C5.73,8.275 5.833,8.03 5.9,7.78
-        C5.967,7.53 6,7.26 6,7
-        C6,6.74 5.967,6.47 5.9,6.22
-        C5.833,5.97 5.73,5.725 5.6,5.5
-    </string>
-
-    <string name="path_r">
-        M4.5,7.75
-        C4.5,7.75 6,7.1 6,5
-        C6,8 6,0 6,2.5
-        C6,1.2 4.8,0 3.5,0
-        C4,0 0,0 0,0
-        C0,0 0,4 0,4
-        C0,4 0,7 0,7
-        C0,7 0,10 0,10
-        C0,10 0,14 0,14
-        C0,14 2,14 2,14
-        C2,14 2,10 2,10
-        C2,10 2,6 2,6
-        C2,6 2,2 2,2
-        C2,2 3,2 3,2
-        C3.55,2 4,2.55 4,3
-        C4,3 4,5 4,5
-        C4,5.55 3.55,6 3,6
-        C3,6 2,6 2,6
-        C2,6 2,8 2,8
-        C2,8 2.7,8 2.7,8
-        C2.7,8 3.4,11 3.4,11
-        C3.4,11 4.1,14 4.1,14
-        C4.1,14 6,14 6,14
-        C6,14 5.25,10.88 5.25,10.88
-        C5.25,10.88 4.5,7.75 4.5,7.75
-    </string>
-
     <string name="path_r_circle">@string/path_s_circle</string>
     <string name="path_r_rect">@string/path_s_rect</string>
 </resources>
