--- a/app/src/main/res/drawable/anim_s_circle.xml
+++ b/app/src/main/res/drawable/anim_s_circle.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:drawable="@drawable/ic_strv_s_circle">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:drawable="@drawable/ic_strv_s_circle">
 
-    <target android:animation="@animator/animator_s_circle"
-            android:name="letter_s"/>
+	<target
+		android:name="letter_s"
+		android:animation="@animator/animator_s_circle" />
 
 </animated-vector>
