--- a/app/src/main/res/drawable/anim_v_rect.xml
+++ b/app/src/main/res/drawable/anim_v_rect.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animated-vector
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:drawable="@drawable/ic_strv_v">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:drawable="@drawable/ic_strv_v">
 
-    <target android:animation="@animator/animator_v_rect"
-            android:name="letter_v"/>
+	<target
+		android:name="letter_v"
+		android:animation="@animator/animator_v_rect" />
 
 </animated-vector>
