--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,147 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	tools:context=".MainActivity">
 
-    <android.support.constraint.motion.MotionLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/red_letters_container"
-            app:layoutDescription="@xml/motionscene_letters_fly_in">
+	<android.support.constraint.motion.MotionLayout
+		android:id="@+id/red_letters_container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		app:layoutDescription="@xml/motionscene_letters_fly_in">
 
-        <ImageView
-                android:id="@+id/letter_s"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/anim_s_circle"
-                style="@style/LetterStyle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/letter_t"
-                app:layout_constraintHorizontal_chainStyle="packed"/>
+		<ImageView
+			android:id="@+id/letter_s"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_s_circle"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toStartOf="@id/letter_t"
+			app:layout_constraintHorizontal_chainStyle="packed" />
 
-        <ImageView
-                android:id="@+id/letter_t"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/anim_t_circle"
-                style="@style/LetterStyle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_s"
-                app:layout_constraintEnd_toStartOf="@id/letter_r"/>
+		<ImageView
+			android:id="@+id/letter_t"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_t_circle"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_s"
+			app:layout_constraintEnd_toStartOf="@id/letter_r" />
 
-        <ImageView
-                android:id="@+id/letter_r"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                style="@style/LetterStyle"
-                android:src="@drawable/anim_r_circle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_t"
-                app:layout_constraintEnd_toStartOf="@id/letter_v"/>
+		<ImageView
+			android:id="@+id/letter_r"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_r_circle"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_t"
+			app:layout_constraintEnd_toStartOf="@id/letter_v" />
 
-        <ImageView
-                android:id="@+id/letter_v"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                style="@style/LetterStyle"
-                android:src="@drawable/anim_v_circle"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_r"
-                app:layout_constraintEnd_toEndOf="parent"/>
+		<ImageView
+			android:id="@+id/letter_v"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_v_circle"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_r"
+			app:layout_constraintEnd_toEndOf="parent" />
 
-    </android.support.constraint.motion.MotionLayout>
+	</android.support.constraint.motion.MotionLayout>
 
-    <android.support.constraint.motion.MotionLayout
-            android:id="@+id/black_letters_container"
-            android:visibility="invisible"
-            android:background="@android:color/black"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutDescription="@xml/motionscene_rect_expand">
+	<android.support.constraint.motion.MotionLayout
+		android:id="@+id/black_letters_container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="invisible"
+		android:background="@android:color/black"
+		app:layoutDescription="@xml/motionscene_rect_expand">
 
-        <Space
-                android:layout_width="@dimen/logo_letter_padding_horizontal"
-                android:layout_height="0dp"
-                android:id="@+id/letters_anchor"
-                app:layout_constraintEnd_toEndOf="@id/letter_v1"
-                app:layout_constraintTop_toTopOf="@id/letter_v1"
-                app:layout_constraintBottom_toBottomOf="@id/letter_v1"/>
+		<Space
+			android:id="@+id/letters_anchor"
+			android:layout_width="@dimen/logo_letter_padding_horizontal"
+			android:layout_height="0dp"
+			app:layout_constraintEnd_toEndOf="@id/letter_v1"
+			app:layout_constraintTop_toTopOf="@id/letter_v1"
+			app:layout_constraintBottom_toBottomOf="@id/letter_v1" />
 
-        <ImageView
-                android:id="@+id/letter_s1"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/anim_s_rect"
-                style="@style/LetterStyle"
-                android:tint="@android:color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/letter_t1"
-                app:layout_constraintHorizontal_chainStyle="packed"/>
+		<ImageView
+			android:id="@+id/letter_s1"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_s_rect"
+			android:tint="@android:color/white"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintEnd_toStartOf="@id/letter_t1"
+			app:layout_constraintHorizontal_chainStyle="packed" />
 
-        <ImageView
-                android:id="@+id/letter_t1"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                android:src="@drawable/anim_t_rect"
-                style="@style/LetterStyle"
-                android:tint="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_s1"
-                app:layout_constraintEnd_toStartOf="@id/letter_r1"/>
+		<ImageView
+			android:id="@+id/letter_t1"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_t_rect"
+			android:tint="@android:color/white"
+			style="@style/LetterStyle"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_s1"
+			app:layout_constraintEnd_toStartOf="@id/letter_r1" />
 
-        <ImageView
-                android:id="@+id/letter_r1"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                style="@style/LetterStyle"
-                android:src="@drawable/anim_r_rect"
-                android:tint="@android:color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_t1"
-                app:layout_constraintEnd_toStartOf="@id/letter_v1"/>
+		<ImageView
+			android:id="@+id/letter_r1"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_r_rect"
+			android:tint="@android:color/white"
+			style="@style/LetterStyle"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_t1"
+			app:layout_constraintEnd_toStartOf="@id/letter_v1" />
 
-        <ImageView
-                android:id="@+id/letter_v1"
-                android:layout_width="@dimen/logo_letter_width"
-                android:layout_height="@dimen/logo_letter_height"
-                style="@style/LetterStyle"
-                android:src="@drawable/anim_v_rect"
-                android:tint="@android:color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/letter_r1"
-                app:layout_constraintEnd_toEndOf="parent"/>
+		<ImageView
+			android:id="@+id/letter_v1"
+			android:layout_width="@dimen/logo_letter_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:src="@drawable/anim_v_rect"
+			android:tint="@android:color/white"
+			style="@style/LetterStyle"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toEndOf="@id/letter_r1"
+			app:layout_constraintEnd_toEndOf="parent" />
 
-        <ImageView
-                android:id="@+id/letter_cursor"
-                android:layout_width="@dimen/logo_cursor_width"
-                android:layout_height="@dimen/logo_letter_height"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:scaleType="fitXY"
-                app:layout_constraintStart_toStartOf="@id/letters_anchor"
-                android:src="@drawable/ic_cursor"/>
+		<ImageView
+			android:id="@+id/letter_cursor"
+			android:layout_width="@dimen/logo_cursor_width"
+			android:layout_height="@dimen/logo_letter_height"
+			android:scaleType="fitXY"
+			android:src="@drawable/ic_cursor"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="@id/letters_anchor" />
 
-    </android.support.constraint.motion.MotionLayout>
+	</android.support.constraint.motion.MotionLayout>
 
-    <FrameLayout
-            android:id="@+id/loading_overlay"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            android:background="@android:color/white"/>
+	<FrameLayout
+		android:id="@+id/loading_overlay"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:visibility="gone"
+		android:background="@android:color/white" />
 
 </FrameLayout>
