--- a/app/src/main/res/xml/motionscene_rect_expand.xml
+++ b/app/src/main/res/xml/motionscene_rect_expand.xml
@@ -10,86 +10,86 @@
 		<KeyFrameSet>
 
 			<KeyPosition
-				app:target="@id/letter_s1"
+					app:motionTarget="@id/letter_s1"
 				app:framePosition="20"
 				app:percentY="-0.5"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_s1"
+					app:motionTarget="@id/letter_s1"
 				app:framePosition="40"
 				app:percentY="0"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_s1"
+					app:motionTarget="@id/letter_s1"
 				app:framePosition="50"
 				app:percentY="1"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_t1"
+					app:motionTarget="@id/letter_t1"
 				app:framePosition="30"
 				app:percentY="-0.5"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_t1"
+					app:motionTarget="@id/letter_t1"
 				app:framePosition="60"
 				app:percentY="0"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_t1"
+					app:motionTarget="@id/letter_t1"
 				app:framePosition="70"
 				app:percentY="1"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_r1"
+					app:motionTarget="@id/letter_r1"
 				app:framePosition="15"
 				app:percentY="-0.5"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_r1"
+					app:motionTarget="@id/letter_r1"
 				app:framePosition="45"
 				app:percentY="0"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_r1"
+					app:motionTarget="@id/letter_r1"
 				app:framePosition="55"
 				app:percentY="1"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_v1"
+					app:motionTarget="@id/letter_v1"
 				app:framePosition="25"
 				app:percentY="-0.5"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_v1"
+					app:motionTarget="@id/letter_v1"
 				app:framePosition="50"
 				app:percentY="0"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_v1"
+					app:motionTarget="@id/letter_v1"
 				app:framePosition="60"
 				app:percentY="1"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="60"
 				app:percentY="0"
 				app:percentX="0"
 				app:keyPositionType="deltaRelative" />
 
 			<KeyPosition
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="80"
 				app:percentY="1"
 				app:percentX="1"
@@ -97,35 +97,35 @@
 
 			<KeyAttribute
 				android:rotation="0"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="60" />
 
 			<KeyAttribute
 				android:rotation="90"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="80" />
 
 			<KeyAttribute
 				android:scaleX="1"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="90"
 				app:transitionEasing="standard" />
 
 			<KeyAttribute
 				android:scaleX="4"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="97"
 				app:transitionEasing="accelerate" />
 
 			<KeyAttribute
 				android:scaleX="4"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="99"
 				app:transitionEasing="accelerate" />
 
 			<KeyAttribute
 				android:scaleX="0"
-				app:target="@id/letter_cursor"
+					app:motionTarget="@id/letter_cursor"
 				app:framePosition="100" />
 
 		</KeyFrameSet>
